--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "swiper": "^11.0.6",
     "swr": "^2.2.4"
   },
   "devDependencies": {
