--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "mongoose": "^8.1.2",
     "next": "^14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
