--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.1.2",
     "next": "^14.1.0",
     "next-auth": "^4.24.6",
+    "next-cloudinary": "^5.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
