--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "reactjs-bottom-navigation": "^2.0.5",
     "swiper": "^11.0.6",
     "swr": "^2.2.4"
   },
